[change, forget password]

--- a/frontend/src/app/components/home/forget-password/forget-password-popup.component.html
+++ b/frontend/src/app/components/home/forget-password/forget-password-popup.component.html
@@ -10,7 +10,7 @@
           <label>Địa chỉ e-mail:</label>
         </div>
         <div class="col-12">
-          <input type="text" class="form-control" placeholder="Nhập địa chỉ e-mail" id="email">
+          <input type="text" class="form-control" placeholder="Nhập địa chỉ e-mail" [(ngModel)]="email">
         </div>
       </div>
     </div>
