--- a/frontend/src/app/components/home/get-password/get-password.component.html
+++ b/frontend/src/app/components/home/get-password/get-password.component.html
@@ -1,23 +1,41 @@
 <div class="row">
-    <div class="col-6 mx-auto">
-        <div class="form-group">
-            <label>UserId: </label>
-            <input name="userId" readonly value="{{email}}" class="form-control" />
-        </div>
-        <div class="form-group">
-            <label>Password: </label>
-            <input name="password" value="" class="form-control" type="password" />
-        </div>
-        <div class="form-group">
-            <label>Xác nhận password: </label>
-            <input name="rePassword" value="" class="form-control" type="password"/>
-        </div>
-        <div class="form-group">
-            <label>Nhập mã code được gửi tới email: </label>
-            <input name="code" value="" class="form-control" />
-        </div>
-        <button class="btn btn-primary float-right" type="submit">
-            Đổi mật khẩu
-        </button>
+  <div class="col-6 mx-auto">
+    <div class="form-group row">
+      <label>UserId: </label>
+      <input name="userId" readonly value="{{email}}" class="form-control" />
     </div>
+    <div class="form-group row">
+      <label>Password <span class="text-danger">*</span> </label>
+      <input name="password" value="" class="form-control" type="password" [(ngModel)]="password" />
+      <div class="col-12" *ngIf="passwordEmpty">
+        <small class="text-danger">Mật khẩu là bắt buộc</small>
+      </div>
+      <div class="col-12" *ngIf="!passwordEmpty && passwordInvalid">
+        <small class="text-danger">Mật khẩu yếu</small>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label>Xác nhận password <span class="text-danger">*</span> </label>
+      <input name="rePassword" value="" class="form-control" type="password" [(ngModel)]="confirmPassword" />
+      <div class="col-12" *ngIf="confirmPasswordEmpty">
+        <small class="text-danger">Xác nhận mật khẩu là bắt buộc</small>
+      </div>
+      <div class="col-12" *ngIf="!confirmPasswordEmpty && confirmPasswordInvalid">
+        <small class="text-danger">Mật khẩu không trùng</small>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label>Nhập mã code được gửi tới email <span class="text-danger">*</span> </label>
+      <input name="code" value="" class="form-control" [(ngModel)]="code" />
+      <div class="col-12" *ngIf="codeEmpty">
+        <small class="text-danger">Mã xác nhận là bắt buộc</small>
+      </div>
+    </div>
+    <div class="row">
+      <button class="btn btn-primary ml-auto" type="submit" (click)="getPassword()">
+        Đổi mật khẩu
+      </button>
+    </div>
+ 
+  </div>
 </div>
