--- a/backend/Nhom2.TMDT.WebApi/Templates/MailVerificationTemplate.html
+++ b/backend/Nhom2.TMDT.WebApi/Templates/MailVerificationTemplate.html
@@ -3,5 +3,5 @@
     Bạn vừa thực hiện yêu cầu đổi mật trên doxin.com<br />
     Để hoàn tất việc lấy lại mật khẩu, vui lòng sử dụng mã xác nhận @Code<br /><br />
     Nếu không phải bạn thực hiện, vui lòng KHÔNG cung cấp mã xác nhận cho bất kì ai<br />
-    Email này có giá trị đến hết ngày @Datetime
+    Email này có giá trị đến hết ngày @Time
 </p>
